--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="container">    
     <div class="jumbotron">
       <h1>
-        <img src="images/Amazon-Logo.jpg">
+        <img src="images/Amazon-logo.jpg">
         <span id="report-date" style="float: right;">2019</span>
       </h1>
       <p></p>
