--- a/index.html
+++ b/index.html
@@ -34,46 +34,47 @@
     tbody>tr:nth-child(even){background-color: #f2f2f2 !important}
     tbody>tr:nth-child(odd){background-color: #fff !important}
 
-  </style>
-  
+  </style>  
+
 </head>
 
 <body>
   <!--Header -->
-  
-  <div class="container">    
-    <div class="jumbotron">
-      <h1>
-        <img src="images/Amazon-logo.jpg">
-        <span id="report-date" style="float: right;">2020</span>
-      </h1>
-      <p></p>
-    </div>
+  <nav class="navbar">
+    <a class="navbar-brand" href="https://www.amazon.ca/">
+      <img src="images/Amazon-logo-2.jpg" width="30" height="30" class="d-inline-block align-top icon" alt=""> 
+    </a>
+
+  </nav>
+
+  <div class="container">  
 
     <div class="row">
       <div class="col-md-12">
-        <div class="panel panel-primary">
-          <div class="panel-body">
-            Company Profile:
+        <div class="panel panel-default">
+          <div class="panel-bodyrd-body">
+            <h5> Company Profile </h5>
+            <p> Amazon.com, Inc. engages in the retail sale of consumer products and subscriptions in North America and internationally. The company operates through three segments: North America, International, and Amazon Web Services (AWS). It sells merchandise and content purchased for resale from third-party sellers through physical and online stores. The company also manufactures and sells electronic devices, including Kindle, Fire tablets, Fire TVs, Rings, and Echo and other devices; provides Kindle Direct Publishing, an online service that allows independent authors and publishers to make their books available in the Kindle Store; and develops and produces media content. In addition, it offers programs that enable sellers to sell their products on its Websites, as well as its stores; and programs that allow authors, musicians, filmmakers, skill and app developers, and others to publish and sell content. Further, the company provides compute, storage, database, and other AWS services, as well as fulfillment, advertising, publishing, and digital content subscriptions. Additionally, it offers Amazon Prime, a membership program, which provides free shipping of various items; access to streaming of movies and TV episodes; and other services. The company also operates in the food delivery business in Bengaluru, India. It serves consumers, sellers, developers, enterprises, and content creators. The company also has utility-scale solar projects in China, Australia, and the United States. Amazon.com, Inc. has a strategic relationship with NXP Semiconductors N.V. to deliver a cloud compute solution for vehicles that enable cloud-powered services. The company was founded in 1994 and is headquartered in Seattle, Washington. </p>
           </div>
-        </div>
-        <div class="company">
-          Amazon.com, Inc. engages in the retail sale of consumer products and subscriptions in North America and internationally. The company operates through three segments: North America, International, and Amazon Web Services (AWS). It sells merchandise and content purchased for resale from third-party sellers through physical and online stores. The company also manufactures and sells electronic devices, including Kindle, Fire tablets, Fire TVs, Rings, and Echo and other devices; provides Kindle Direct Publishing, an online service that allows independent authors and publishers to make their books available in the Kindle Store; and develops and produces media content. In addition, it offers programs that enable sellers to sell their products on its Websites, as well as its stores; and programs that allow authors, musicians, filmmakers, skill and app developers, and others to publish and sell content. Further, the company provides compute, storage, database, and other AWS services, as well as fulfillment, advertising, publishing, and digital content subscriptions. Additionally, it offers Amazon Prime, a membership program, which provides free shipping of various items; access to streaming of movies and TV episodes; and other services. The company also operates in the food delivery business in Bengaluru, India. It serves consumers, sellers, developers, enterprises, and content creators. The company also has utility-scale solar projects in China, Australia, and the United States. Amazon.com, Inc. has a strategic relationship with NXP Semiconductors N.V. to deliver a cloud compute solution for vehicles that enable cloud-powered services. The company was founded in 1994 and is headquartered in Seattle, Washington.
         </div>
       </div>
     </div>
+  
 
     <div class="row">
       <div class="col-md-12">
         <div class="panel panel-default">
           <div class="panel-body">
-            Stock Performance:
+            <h5>Stock Performance:</h5>
           </div>
         </div>
         <div id="plot"></div>
       </div>
 
     </div>
+  </div>
+
+  <div class="container">
 
     <div class="row">
       <div class="col-md-12">
